--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,12 +17,10 @@
     <ul class='lists-right'>
       <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐させましょう%>
       <%= <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
-      <%= <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" </li> %>
-      <%= <li><%= link_to 'ログイン', "#", class: "login" </li> %>
-      <%= <li><%= link_to '新規登録', "#", class: "sign-up" </li> %> 
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐させましょう%>
       <% if user_signed_in? %>
           <div class="user_nav grid-6">
+              <span><%= current_user.nickname %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
           </div>
         <% else %>
