--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,15 +16,15 @@
     </ul>
     <ul class='lists-right'>
       <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐させましょう%>
-      <%= <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐させましょう%>
       <% if user_signed_in? %>
-          <div class="user_nav grid-6">
-              <span><%= current_user.nickname %>
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%# <div class="user_nav grid-6"> %>
+            <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+              <%# <span><%= current_user.nickname %>
+            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
           </div>
         <% else %>
-          <div class="grid-6">
+          <%# <div class="grid-6"> %>
             <%= link_to "ログイン", new_user_session_path, class: "login" %>
             <%= link_to "新規登録", new_user_registration_path, class: "sign-up" %>
           </div>
