--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -126,14 +126,14 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-  <% @goods.each do |goods| %>
+  <% @goods.each do |good| %>
 
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "good.rb" do %>
+        <%= link_to good_path(good) do %>
         <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
+          <%= image_tag good.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outの表示 %>
           <div class='sold-out'>
@@ -144,10 +144,10 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "name" %>
+            <%= good.name %>
           </h3>
           <div class='item-price'>
-            <span><%= "price" %>円<br>(税込み)</span>
+            <span><%= good.price %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
