--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -156,10 +156,14 @@
         </div>
         <% end %>
       </li>
-   <% end %>
+  
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
+
+      
+      <% if(good.id=nil?) then %>
+
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -181,6 +185,9 @@
       <%# //商品がない場合のダミー %>
     </ul>
   </div>
+
+  <% end %>
+   <% end %>
 
   <%# //商品一覧 %>
 </div>
