--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -131,7 +131,7 @@
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to good_path(good) do %>
+        <%= link_to good_path(good.id) do %>
         <div class='item-img-content'>
           <%= image_tag good.image, class: "item-img" %>
 
