--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -1,16 +1,13 @@
 <%= render "shared/header" %>
 
 <%# 商品の概要 %>
-
-  <%# <% @good.each do |good| %> %>
-
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
-      <%= @good.name %>
+      <%= "商品名" %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag @good.image ,class:"item-box-img" %>
+      <%= image_tag "item-sample.png" ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
@@ -19,7 +16,7 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-            <span><%= @good.price %>円<br>(税込み)</span>
+        ¥ 999,999,999
       </span>
       <span class="item-postage">
         (税込) 送料込み
@@ -28,11 +25,9 @@
 
     <%# ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう%>
 
-
-    <%= link_to '商品の編集', edit_good_path(@good.id), method: :get, class: "item-red-btn" %>
-
+    <%= link_to '商品の編集', "#", method: :get, class: "item-red-btn" %>
     <p class='or-text'>or</p>
-    <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
+    <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
@@ -47,27 +42,27 @@
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= @good.user.nickname %></td>
+          <td class="detail-value"><%= "出品者名" %></td>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
-          <td class="detail-value"><%= @good.category.name %></td>
+          <td class="detail-value"><%= "カテゴリー名" %></td>
         </tr>
         <tr>
           <th class="detail-item">商品の状態</th>
-          <td class="detail-value"><%= @good.status.name %></td>
+          <td class="detail-value"><%= "商品の状態" %></td>
         </tr>
         <tr>
           <th class="detail-item">配送料の負担</th>
-          <td class="detail-value"><%= @good.delivery.name %></td>
+          <td class="detail-value"><%= "発送料の負担" %></td>
         </tr>
         <tr>
           <th class="detail-item">発送元の地域</th>
-          <td class="detail-value"><%= @good.area.name %></td>
+          <td class="detail-value"><%= "発送元の地域" %></td>
         </tr>
         <tr>
           <th class="detail-item">発送日の目安</th>
-          <td class="detail-value"><%= @good.shippingdate.name %></td>
+          <td class="detail-value"><%= "発送日の目安" %></td>
         </tr>
       </tbody>
     </table>
@@ -98,7 +93,6 @@
       </button>
     </form>
   </div>
-  <%# <% end %> 
   <div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
