--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -27,17 +27,18 @@
     </div>
 
     <%# ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう%>
-
+    <% if user_signed_in? && current_user.id == @good.user_id %>
 
     <%= link_to '商品の編集', edit_good_path(@good.id), method: :get, class: "item-red-btn" %>
 
     <p class='or-text'>or</p>
     <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
-
+    <% if current_user %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-
+      <% end %>
+  <% end %>
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
     <div class="item-explain-box">
