--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -33,7 +33,7 @@
 
     <p class='or-text'>or</p>
     <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
-    <% if current_user %>
+    <% if user_signed_in?  %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
@@ -108,7 +108,7 @@
       後ろの商品 ＞
     </a>
   </div>
-  <a href="#" class='another-item'><%= "商品のカテゴリー名" %>をもっと見る</a>
+  <a href="#" class='another-item'><%= @good.category.name %>をもっと見る</a>
 </div>
 
 <%= render "shared/footer" %>
