--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -2,7 +2,7 @@
 
 <%# 商品の概要 %>
 
-  <%# <% @good.each do |good| %> %>
+  <%# <% @good.each do |good| %> 
 
 <div class="item-show">
   <div class="item-box">
@@ -33,16 +33,20 @@
 
     <p class='or-text'>or</p>
     <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
-    <% if user_signed_in?  %>
+  
+    <% else %>
+    <% if user_signed_in?%>
+  
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
-  <% end %>
+      <% end %>
+
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @good.comment %></span>
     </div>
     <table class="detail-table">
       <tbody>
