--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -34,15 +34,14 @@
     <p class='or-text'>or</p>
     <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
   
-    <% else %>
-    <% if user_signed_in?%>
+ <% if user_signed_in? && current_user.id != @good.user_id  %>
   
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
+      <% else %>
       <% end %>
       <% end %>
-
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
     <div class="item-explain-box">
