商品購入機能実装

--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -136,10 +136,13 @@
           <%= image_tag good.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outの表示 %>
+          <% if good.order != nil %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+          <% end %>
           <%# //商品が売れていればsold outの表示 %>
+
 
         </div>
         <div class='item-info'>
@@ -187,7 +190,9 @@
   </div>
 
   <% end %>
-   <% end %>
+
+  <% end %>
+
 
   <%# //商品一覧 %>
 </div>
