--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -10,8 +10,11 @@
     <div class='item-img-content'>
       <%= image_tag @good.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
-      <div class='sold-out'>
+               <% if @good.order != nil %>
+       <div class='sold-out'>
         <span>Sold Out!!</span>
+               <% end %>
+
       </div>
       <%# //商品が売れている場合は、sold outの表示をしましょう。 %>
     </div>
@@ -31,15 +34,16 @@
 
     <p class='or-text'>or</p>
     <%= link_to '削除', good_path(@good.id), method: :delete, class:'item-destroy' %>
-  
- <% if user_signed_in? && current_user.id != @good.user_id  %>
+ 
+  <% else %>
   
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+   <% if @good.order == nil %>
+    <%= link_to '購入画面に進む', good_orders_path(@good.id) ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-      <% else %>
       <% end %>
-      <% end %>
+  <% end %>
+
     <%# // ログインしているユーザと出品しているユーザが同一人物である時、商品の編集と削除を表示にしましょう %>
 
     <div class="item-explain-box">
